test/valid_codesnipsets/assign_int.go
package main

import "fmt"

func main(){
    var a int = 1
    a = 4
}