test/parse_errors/string_literal.go
package main

import "fmt"

func main(){
    var s string = "Hallo
    fmt.Println(s)
}